# rust-learning-notes

./: Cargo.toml  README.md
examples/: env_logger.rs  etcd.rs  failure.rs  ferris.rs  http_server.rs  minigrep.rs  oneshot.rs  predicate.rs  rand.rs  rayon.rs  redis.rs  serde_json.rs  sled.rs  tempfile.rs  walkdir.rs
my_db/: db  snap.00000000000001E4
src/: ferris.rs  lib.rs  main.rs
src/engines/: math.rs  mod.rs
tests/: tests.rs
