[package]
name = "cathy"
version = "0.1.0"
authors = ["zfh <fuhongzuo@gmail.com>"]
edition = "2018"
description = "rust learning notes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tempfile = "3.0.7"
ferris-says = "0.2"
clap = "2.32.0"
predicates = "1.0.5"
walkdir = "2.2.7"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
rand = "0.6.5"
log = "0.4.6"
env_logger = "0.6.1"
sled = "0.34.6"
structopt = "0.3.21"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
failure = "0.1.8"
rayon = "1.0.3"